@@ -1,5 +1,9 @@
 2007-07-18 Erik Hjortsberg  <erik.hjortsberg@iteam.se>
 
+	* src/services/wfut/WfutSession.h, src/services/wfut/WfutSession.cpp, src/services/wfut/WfutService.h, src/services/wfut/WfutService.cpp: use size_t where needed
+
+2007-07-18 Erik Hjortsberg  <erik.hjortsberg@iteam.se>
+
 	* src/framework/IResourceProvider.h: include <memory>
 	* ember.nsi, ember.sln, ember.vcproj: update win32 project files
 	* ember.conf: also load the direct3d plugin on windows (on linux it will just fail and carry on)
